force-app/main/default/objects/HS_Conversion_Mapping__c/HS_Conversion_Mapping__c.object-meta.xml
<CustomObject>
    <description>Provides organized sales values for HS recent activity field content</description>
    <label>HS Conversion Mapping</label>
    <nameField>
        <displayFormat>HS-{000}</displayFormat>
        <label>HS Conversion Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS Conversion Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>