force-app/main/default/objects/HS_Conversion_Mapping__c/fields/HS_Recent_Convers__c.field-meta.xml
<CustomField>
    <fullName>HS_Recent_Convers__c</fullName>
    <description>Field value of HS Recent Conversion on leads</description>
    <inlineHelpText>Field value of HS Recent Conversion on leads</inlineHelpText>
    <label>HS Recent Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>