force-app/main/default/objects/HS_Conversion_Mapping__c/fields/Priority_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Priority_Ranking__c</fullName>
    <description>Sales priority of sales conversion types for HS submissions</description>
    <inlineHelpText>Sales priority of sales conversion types for HS submissions</inlineHelpText>
    <label>Priority Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>