force-app/main/default/objects/HS_Conversion_Mapping__c/fields/Sales_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Conversion_Type__c</fullName>
    <description>Assigned sales value of HS recent conversion field</description>
    <label>Sales Conversion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>