force-app/main/default/objects/HS_Conversion_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HS_Recent_Convers__c</columns>
    <columns>Sales_Conversion_Type__c</columns>
    <columns>Priority_Ranking__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>